@@ -1,7 +1,7 @@
 
-                            Less, version 381
+                            Less, version 382
 
-    This is the distribution of less, version 381, released 17 Jan 2003.
+    This is the distribution of less, version 382, released 03 Feb 2004.
     This program is part of the GNU project (http://www.gnu.org).
 
     This program is free software.  You may redistribute it and/or
